--- a/home/src/app/navbar/navbar.component.html
+++ b/home/src/app/navbar/navbar.component.html
@@ -1,31 +1,30 @@
 <div class="hero-head pt-5">
-  <nav class="navbar">
-    <div class="container">
-      <div class="navbar-brand">
-        <a class="navbar-item" href="#">
-          <img src="../../assets/images/emogi.jpg" width="30" height="30" />
-        </a>
-        <a class="navbar-item">
-          <h3 class="logo has-text-green is-size-4">Seven Labs</h3>
-        </a>
-      </div>
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="#">
+                    <img src="../../assets/images/emogi.jpg" width="30" height="30" />
+                </a>
+                <a class="navbar-item">
+                    <h3 class="logo has-text-green is-size-4">Seven Labs</h3>
+                </a>
+            </div>
 
-      <div class="navbar-menu">
-        <div class="navbar-end">
-          <a class="a-menu is-size-6 navbar-item"> home </a>
-          <a class="a-menu is-size-6 navbar-item"> about </a>
-          <a class="a-menu is-size-6 navbar-item"> features </a>
-          <a class="a-menu is-size-6 navbar-item"> contact </a>
-          <a class="a-menu is-size-6 navbar-item"> contact </a>
-          <div class="buttons">
+            <div class="navbar-menu">
+                <div class="navbar-end">
+                    <a class="a-menu is-size-6 navbar-item"> home </a>
+                    <a class="a-menu is-size-6 navbar-item"> about </a>
+                    <a class="a-menu is-size-6 navbar-item"> features </a>
+                    <a class="a-menu is-size-6 navbar-item"> contact </a>
+                    <a class="a-menu is-size-6 navbar-item"> contact </a>
+                    <div class="buttons">
+                        <a [routerLink]="['/login']" class="a-menu is-size-6 navbar-item button is-primary">Login</a
+            >
             <a
-            [routerLink]="['/login']"
-            class="a-menu is-size-6 navbar-item button is-primary"
-            >Login</a
-          >
-          <a [routerLink]="['/register']" class="a-menu is-size-6 navbar-item button is-primary"
-            >Register</a
-          >
+              [routerLink]="['/signup']"
+              class="a-menu is-size-6 navbar-item button is-primary"
+              >Signup</a
+            >
           </div>
         </div>
       </div>
