--- a/home/src/app/login/login.component.html
+++ b/home/src/app/login/login.component.html
@@ -20,7 +20,7 @@
             </div>
         </form>
     </div>
-    <div class="third-party-signin-options-container mt-5">
+    <div class="third-party-signin-options-container mfa mt-5">
         <div class="row">
             <div class="third-party-signin-item">
                 <img src="../../assets/images/google-icon.svg" alt="" />
