--- a/home/src/app/navbar/navbar.component.html
+++ b/home/src/app/navbar/navbar.component.html
@@ -17,13 +17,11 @@
                     <a class="a-menu is-size-6 navbar-item"> features </a>
                     <a class="a-menu is-size-6 navbar-item"> contact </a>
                     <a class="a-menu is-size-6 navbar-item"> contact </a>
-                    <div class="buttons">
-                        <a [routerLink]="['/login']" class="a-menu is-size-6 navbar-item button is-primary">Login</a
-            >
-            <a
-              [routerLink]="['/signup']"
-              class="a-menu is-size-6 navbar-item button is-primary"
-              >Signup</a
+                    <div class="buttons loginBlock">
+                        <a [routerLink]="['/login']" class="a-menu is-size-6 navbar-item button loginButton">Login
+              <i class="fa fa-sign-in ico" aria-hidden="true"></i>
+            </a>
+                        <a [routerLink]="['/signup']" class="a-menu is-size-6 navbar-item button is-primary">Signup</a
             >
           </div>
         </div>
