--- a/home/src/app/register/register.component.html
+++ b/home/src/app/register/register.component.html
@@ -1,28 +1,35 @@
 <section class="signup-container">
     <div class="logo-box">
-      <p class="logo"><a routerLink="/">Seven Labs</a></p>
+        <p class="logo"><a routerLink="/">Seven Labs</a></p>
     </div>
     <div class="signup-form-container">
-      <p class="signup-form-heading">Create an account</p>
-      <form action="" class="signup-form">
-        <div class="form-group">
-          <input type="email" class="mt-5 pb-5" placeholder="Type your email" />
+        <p class="signup-form-heading">Create an account</p>
+        <form action="" class="signup-form">
+            <div class="form-group">
+                <input type="email" class="mt-5 pb-5" placeholder="Type your email" />
+            </div>
+            <div class="form-group">
+                <input type="password" class="mt-5 pb-5" placeholder="Type your password" />
+            </div>
+            <!-- recaptcha -->
+            <div class="form-group">
+                <div class="g-recaptcha" ng-model="g-recaptcha-response" data-sitekey="6LeTjzQbAAAAAKRSAOVz2Dqe_yz_0cMRahRgsX_2"></div>
+            </div>
+
+            <!-- <re-captcha [(ngModel)]="formModel.captcha" name="captcha" required siteKey="6LeTjzQbAAAAAKRSAOVz2Dqe_yz_0cMRahRgsX_2"></re-captcha> -->
+
+            <div class="form-group">
+                <input type="submit" class="signup-form-btn mt-5 pb-5" value="Register" />
+            </div>
+            <div class="forgot-password-and-signup-links-div pt-5">
+                <p><a routerLink="/login">Already have an account? Login</a></p>
+            </div>
+        </form>
+        <div class="terms-and-conditions-links pt-5">
+            <p>
+                By clicking <span>"Register"</span> you create account and agree to our
+                <a href="">Terms and Conditions</a> and <a href="">Privacy Policy</a>.
+            </p>
         </div>
-        <div class="form-group">
-          <input type="password" class="mt-5 pb-5" placeholder="Type your password" />
-        </div>
-        <div class="form-group">
-          <input type="submit" class="signup-form-btn mt-5 pb-5" value="Register" />
-        </div>
-        <div class="forgot-password-and-signup-links-div pt-5">
-          <p><a routerLink="/login">Already have an account? Login</a></p>
-        </div>
-      </form>
-      <div class="terms-and-conditions-links pt-5">
-          <p>
-              By clicking <span>"Register"</span> you create account and agree to our <a href="">Terms and Conditions</a> and <a href="">Privacy Policy</a>.
-          </p>
-      </div>
     </div>
-  </section>
-  
+</section>
