--- a/home/src/app/register/register.component.html
+++ b/home/src/app/register/register.component.html
@@ -6,20 +6,20 @@
         <p class="signup-form-heading">Create an account</p>
         <form action="" class="signup-form">
             <div class="form-group">
-                <input type="email" class="mt-5 pb-5" placeholder="Type your email" />
+                <input type="text" [(ngModel)]="userObj.username" class="mt-5 pb-5" placeholder="Type your username" name="username" />
             </div>
             <div class="form-group">
-                <input type="password" class="mt-5 pb-5" placeholder="Type your password" />
+                <input type="password" [(ngModel)]="userObj.password" class="mt-5 pb-5" placeholder="Type your password" name="password" />
             </div>
             <!-- recaptcha -->
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <div class="g-recaptcha" ng-model="g-recaptcha-response" data-sitekey="6LeTjzQbAAAAAKRSAOVz2Dqe_yz_0cMRahRgsX_2"></div>
-            </div>
+            </div> -->
 
             <!-- <re-captcha [(ngModel)]="formModel.captcha" name="captcha" required siteKey="6LeTjzQbAAAAAKRSAOVz2Dqe_yz_0cMRahRgsX_2"></re-captcha> -->
 
             <div class="form-group">
-                <input type="submit" class="signup-form-btn mt-5 pb-5" value="Register" />
+                <input type="submit" (click)="addUser()" class="signup-form-btn mt-5 pb-5" value="Register" />
             </div>
             <div class="forgot-password-and-signup-links-div pt-5">
                 <p><a routerLink="/login">Already have an account? Login</a></p>
